created basic ui

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,9 @@
     --green: rgba(76, 175, 80, 1);
     --yellow: rgba(255, 195, 0, 1);
     --grey: rgba(90, 90, 90, 1);
+    --phone: 640px;
+    --tablet: 1024px;
+    --desktop: 1536px;
 }
 
 * {
@@ -11,4 +14,162 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Raleway", sans-serif;
+}
+
+.app {
+    display: flex;
+    flex-direction: column;
+}
+
+.nav-link {
+    text-decoration: none;
+    font-size: 18px;
+    text-align: right;
+    color: black;
+    padding: 8px;
+}
+
+.nav-link:hover {
+    border-bottom: 3px solid var(--yellow);
+}
+
+.nav-link:active {
+    background-color: var(--yellow);
+}
+
+.section-container {
+    width: 100%;
+    padding: 80px 16px;
+}
+
+.section-title {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+}
+
+.section-description {
+    font-size: 18px;
+    line-height: 23px;
+}
+
+.form-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.form-input {
+    font-size: 16px;
+    line-height: 20px;
+    border: none;
+    border-bottom: 1px solid black;
+    margin-bottom: 2px;
+}
+
+.form-input:focus {
+    outline: none;
+    border-bottom: 3px solid var(--green);
+    margin-bottom: 0;
+}
+
+.input-container {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.input-error {
+    border-bottom: 1px solid red;
+    margin-bottom: 2px;
+}
+
+.error-message {
+    font-size: 14px;
+    color: red;
+}
+
+.vue-tel-input {
+    border: none !important;
+    border-radius: 0 !important;
+    border-bottom: 1px solid black !important;
+    margin-bottom: 2px !important;
+}
+
+.vue-tel-input input {
+    font-size: 16px !important;
+    line-height: 20px !important;
+}
+
+.vue-tel-input:focus-within {
+    box-shadow: none !important;
+    border-bottom: 3px solid var(--green) !important;
+    margin-bottom: 0 !important;
+}
+
+.vue-tel-input .vti__dropdown-item {
+    font-size: 16px !important;
+    padding: 8px !important;
+}
+
+.vue-tel-input .vti__dropdown-item:hover {
+    background-color: var(--green) !important; /* Green highlight */
+    color: white !important;
+}
+
+.dialog-close-icon {
+    top: 40px;
+    right: 32px;
+}
+
+.icon {
+    min-width: 24px;
+    min-height: 24px;
+}
+
+.number-icon {
+    min-width: 120px;
+    max-width: 120px;
+    min-height: 83px;
+    max-height: 83px;
+}
+
+.social-icon:hover {
+    cursor: pointer;
+}
+.social-icon:hover path {
+    fill: green;
+}
+
+@media (min-width: 640px) {
+    .section-container {
+        padding: 80px 40px;
+    }
+
+    .section-title {
+        font-size: 40px;
+        line-height: 52px;
+    }
+
+    .section-description {
+        font-size: 24px;
+        line-height: 31px;
+    }
+
+    .dialog-close-icon {
+        right: 40px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .section-title {
+        font-size: 40px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .section-container {
+        padding: 120px;
+    }
 }
